spacing issues

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -400,7 +400,8 @@ a{
   }
   
   .project .proto iframe{
-    transform:scale(.7)
+    margin-top: -100px;
+    transform: scale(.7);
   }
   
   .project .proto{
